java.source.base: Collection/Stream focused code renovation
Use potentially more efficient shortcuts like getFirst/Last(),
reversed(), computeIfAbsent(), removeIf(), toList() etc.

Remove redundant calls (e.g stream().forEach()) or dead code.